# emb_logic

./: .gitignore  create_backup.sh  target.txt
00_Linux_system_administration/: driver_on_reboot.md  networking_basics.md  random_information.md  services_during_boot.md
01_c_modules/03_print_scan/: .01.swp  01_program.c  02_int_sum.c  03_circle_area.c  06_self.c  08_pattern.c
01_c_modules/04_types_operators/: 02_sphere.c  06_month.c  07_positive.c  08_highest.c
01_c_modules/07_loops_1/: 09_reverse_integer.c  14_prime_intervals.c  15_armstron.c  17_factors.c  pow_function.c
01_c_modules/08_GDB/: gdb.md
01_c_modules/08_loops_2/: 08_odd_sum.c  10_right_num.c  11_repeat_num.c  15_fact.c  16_even_sum.c  19_harmonic_sum.c
01_c_modules/09_array_1/: 02_sum_array.c  07_second_largest.c  08_sum_avg.c
01_c_modules/10_array_2/: 02_sum_array.c  03_count_even_odd.c  (+4 more)
02_cpp_modules/: 01_Intro_OOPS_CPP_coursera.md  readme.md
04_Network_programming/: important_linux_commands.md  sockets.md
05_device_driver/: readMe.md
08_block_driver/: readme.md
08_block_driver_6.8/: readme.md
09_embedded_linux/: 01_linux_boot_process.md  04_ARM_Board_bring_up.md  embedded_linux.md  linux_boot_process.md  readme.md
14_Linux_network_administration/: 01_netstat.md  02_nmcli.md  readme.md
15_linux_advance_system_programming/: 01_Unix_linux_pholosphy.md  readme.md
16_RUST/: 01_print_variables.md  02_data_types.md  readme.md
AI_ML_on_boards/: readme.md
Coursera/: information.md
c_modules/: good_links
cmake/practice_step_1/step1_ex_3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.h  hello_world.cpp
cmake/practice_step_2/ex_1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cxx
cmake/practice_step_2/ex_1/functions/: CMakeLists.txt  Makefile  cmake_install.cmake  find_root.cxx  functions.h
cmake/practice_step_2/ex_1/working_cmake_file/: CMakeLists.txt
cmake/practice_step_2/ex_2/: CMakeCache.txt  CMakeLists.txt  Makefile  TutorialConfig.h  TutorialConfig.h.in  cmake_install.cmake  main  main.cxx
cmake/practice_step_2/ex_2/functions/: Makefile  cmake_install.cmake
documents/: readme.md
freeRtos/: 01_interrupt_ISR.md
my_driver_practice/: readme.md  updaet_latest_kernel.md
software_architecture/: singleton_design.md  software_architecture.md
specialized_learning/: 01_SPI.md  02_sys_class.md  03_libgpiod.md  04_makefile.md  05_timers.md  06_allocation_type.md
usb_driver/: readme.md
(+1362 files in other folders)
